--- a/css/main.css
+++ b/css/main.css
@@ -28,14 +28,15 @@ li a:hover {
 }
 
 .circleEffect {
-    width: 30%;
+    width: 40%;
     max-width: 100px;
     height: auto;
-    border-radius: 40%;
+    border-radius: 50%;
     display: block;
     margin-left: auto;
     margin-right: auto;
   position: relative;
+  bottom: -10px;
 
 }
 
@@ -67,6 +68,8 @@ h1 {
     font-family: 'Source Sans Pro', sans-serif;
     color: black;
     text-align: center;
+    font-size: 2vw;
+
 }
 
 h2 {
@@ -75,8 +78,9 @@ h2 {
     text-align: center;
     margin: auto;
     padding: 1px;
+  font-size: 2vw;
   position: relative;
-  top: -30px;
+
 }
 
 
