--- a/css/main.css
+++ b/css/main.css
@@ -2,7 +2,9 @@ ul {
   list-style-type: none;
   margin: 0;
   padding: 0;
+  width: auto;
   overflow: hidden;
+  background-color: aqua;
 }
 
 li {
@@ -16,23 +18,31 @@ li a {
   padding: 14px 16px;
   text-decoration: none;
 
+
 }
 
 p {
   font-size: 22px;
+  border-style: dot-dash;
+  border-color: black;
+  font-family: 'Source Sans Pro', sans-serif;
+  color: black;
+  text-align: center;
+  padding-top: 30px;
+  padding-bottom: 30px;
 }
 
 
 
 li a:hover {
-  background-color: rgba(0, 255, 0, .75);
+  background-color: rgb(205, 229, 226);
 }
 
 .circleEffect {
   width: 40%;
   max-width: 100px;
   height: auto;
-  border-radius: 50%;
+  border-radius: 40%;
   display: block;
   margin-left: auto;
   margin-right: auto;
@@ -46,11 +56,12 @@ li a:hover {
   max-width: 300px;
   height: auto;
   border-radius: 40%;
-  display: block;
   margin-left: auto;
   display: grid;
   justify-content: center;
-  padding: 10px;
+  padding-top: 40px;
+  padding-bottom: 40px;
+  border-bottom: aqua;
 }
 
 .fa {
@@ -64,19 +75,35 @@ h1 {
   font-family: 'Source Sans Pro', sans-serif;
   color: black;
   text-align: center;
-  font-size: 2vw;
+  font-size: 20px;
 
 }
 
+
+div{
+  padding: 20px;
+}
 h2 {
   font-family: 'Source Sans Pro', sans-serif;
   color: black;
   text-align: center;
   margin: auto;
-  padding: 1px;
   font-size: 2vw;
   position: relative;
+  background-color: aqua;
+  padding: 20px;
 
+}
+
+h3{
+  font-family: 'Source Sans Pro', sans-serif;
+  color: black;
+  text-align: center;
+  margin: auto;
+  font-size: 2vw;
+  position: relative;
+  background-color: aqua;
+  padding: 20px;
 }
 
 
@@ -90,12 +117,23 @@ h2 {
   text-align: center;
 }
 
+.text2{
+  white-space: normal;
+  overflow: auto;
+  font-family: 'Source Sans Pro', sans-serif;
+  font-size: 20px;
+
+
+  text-align: justify;
+}
+
 .footerText {
   white-space: normal;
   overflow: auto;
   font-family: 'Source Code Pro', monospace;
   color: black;
   text-align: center;
+  padding-top: 40px;
 }
 
 
