--- a/css/main.css
+++ b/css/main.css
@@ -62,6 +62,7 @@ li a:hover {
   padding-top: 40px;
   padding-bottom: 40px;
   border-bottom: aqua;
+  bottom: -20px;
 }
 
 .fa {
@@ -72,10 +73,12 @@ li a:hover {
 
 
 h1 {
-  font-family: 'Source Sans Pro', sans-serif;
+  font-family: 'Source Sans Pro', sans-serif
   color: black;
   text-align: center;
-  font-size: 20px;
+  font-size: 25px;
+  position: relative;
+  top: -30px;
 
 }
 
