--- a/css/main.css
+++ b/css/main.css
@@ -28,7 +28,7 @@ p {
   font-family: 'Source Sans Pro', sans-serif;
   color: black;
   text-align: center;
-  padding-top: 30px;
+  padding-top: -60px;
   padding-bottom: 30px;
 }
 
@@ -95,6 +95,7 @@ h2 {
   position: relative;
   background-color: aqua;
   padding: 20px;
+  top: -60px;
 
 }
 
@@ -107,6 +108,21 @@ h3{
   position: relative;
   background-color: aqua;
   padding: 20px;
+}
+
+h4{
+  font-family: 'Source Sans Pro', sans-serif;
+  color: black;
+  text-align: center;
+  margin: auto;
+  font-size: 2vw;
+  position: relative;
+  background-color: aqua;
+  padding: 20px;
+  top: -40px;
+  bottom: -40px;
+
+
 }
 
 
@@ -137,6 +153,7 @@ h3{
   color: black;
   text-align: center;
   padding-top: 40px;
+  background-color: aqua;
 }
 
 
