--- a/css/main.css
+++ b/css/main.css
@@ -27,7 +27,7 @@ p {
   border-color: black;
   font-family: 'Source Sans Pro', sans-serif;
   color: black;
-  text-align: center;
+  text-align: justify;
   padding-top: -60px;
   padding-bottom: 30px;
 }
